2009-10-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * de.po: Update of German translation. Thanks to Dominic Hopf for
   reviewing and updating.


2009-10-07  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * es.po: Update of Spanish translation mostly for addons
	  plugin. Thanks to Lucas Vieites.


2009-10-03  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * *.po, geany-plugins.pot:
   Update of translation files and catalog with current strings.


2009-10-02  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * de.po: Update of German translation.


2009-08-08  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * tr.po: Update of Turkish translation. Thanks to Türkan Gür.


2009-07-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * pt_BR.po, LINGUAS:
   Added Brasilian Portuguese translation.
   (Thanks to Adrovane Marques Kade).


2009-07-30  Masami Chikahiro  <cmasa(dot)z321(at)gmail(dot)com>,

 * ja.po:
   Update of Japanese translation.


2009-07-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * ja.po, LINGUAS:
   Update of Japanese translation. Thanks to Chikahiro Masami.


2009-07-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * ja.po, LINGUAS:
   Adding of Japanese translation. Thanks to Chikahiro Masami.


2009-07-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * tr.po: Update of Turkish translation. Thanks to Türkan Gür.


2009-07-07  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * tr.po: Update of Turkish translation. Thanks to Türkan Gür.


2009-07-04  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * fr.po: Update of French translation. Thanks to Lionel Fuentes.


2009-06-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * tr.po, LINGUAS:
   Add Turkish translation. Thanks to Gürkan Gür.


2009-06-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * de.po: Minor update of German translation.


2009-06-11  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany-plugins.pot, LINGUAS, *.po: